--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
                         <h1 class="brand-heading">ATPChecker</h1>
                         <p class="intro-text">
                             Automated Third-party library Privacy leakage Checker tool
-                            <br>Created by Kaifa ZHAO. 
+                            <br> Kaifa Zhao, Xian Zhan, Le Yu, Shiyao Zhou, Hao Zhou, Xiapu Luo, Haoyu Wang, and Yepang Liu
+                            <br> "Demystifying Privacy Policy of Third-Party Libraries in Mobile Apps" 
+                            <br> 45th International Conference on Software Engineering, 2023. 
                             <!-- <iframe width="640px" height="480px" src="https://forms.office.com/r/1sKCvnKAE5?embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe> -->
                             <br> <a href="https://forms.office.com/r/1sKCvnKAE5"> Form to access code and dataset.</a>
                         </p>
