--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i>  <span class="light">Start</span> Bootstrap
+                    <i class="fa fa-play-circle"></i>  
+                    <!-- <span class="light">Start</span>  -->
+                    ATPChecker
                 </a>
             </div>
 
@@ -56,7 +58,7 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#download">Download</a>
+                        <a class="page-scroll" href="#autorization">Authorization</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -76,15 +78,20 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">ATPChecker</h1>
                         <p class="intro-text">
-                            Automated Third-party library Privacy leakage Checker tool
-                            <br> Kaifa Zhao, Xian Zhan, Le Yu, Shiyao Zhou, Hao Zhou, Xiapu Luo, Haoyu Wang, and Yepang Liu
-                            <br> "Demystifying Privacy Policy of Third-Party Libraries in Mobile Apps" 
-                            <br> 45th International Conference on Software Engineering, 2023. 
-                            <!-- <iframe width="640px" height="480px" src="https://forms.office.com/r/1sKCvnKAE5?embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe> -->
-                            <br> <a href="https://forms.office.com/r/1sKCvnKAE5"> Form to access code and dataset.</a>
+                            Automated Third-party library Privacy leakage Checker tool                 
                         </p>
-                        <a href="https://k32ae74p.paperform.co" class="btn btn-circle page-scroll">
-                            <i class="fa fa-angle-double-down animated"></i>
+                        <br> <b> "Demystifying Privacy Policy of Third-Party Libraries in Mobile Apps" </b>
+                            <br> <i>Kaifa Zhao, Xian Zhan, Le Yu, Shiyao Zhou, Hao Zhou, 
+                                <br> Xiapu Luo, Haoyu Wang, and Yepang Liu </i>
+                            <br> <i> 45th International Conference on Software Engineering (ICSE), 2023. </i>
+                            <!-- <iframe width="640px" height="480px" src="https://forms.office.com/r/1sKCvnKAE5?embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe> -->
+                        <p>
+                        <br> <a href="https://forms.office.com/r/1sKCvnKAE5"> Form to access code and dataset.</a> 
+                        </p>
+                        
+                        <br>
+                        <a href="#about" class="btn btn-circle page-scroll">
+                        <i class="fa fa-angle-double-down animated"></i>
                         </a>
                     </div>
                 </div>
@@ -97,21 +104,30 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About ATPChecker</h2>
+
                 <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+
                 <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
+
                 <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+
             </div>
         </div>
     </section>
 
     <!-- Download Section -->
-    <section id="download" class="content-section text-center">
+    <section id="autorization" class="content-section text-center">
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Download Grayscale</h2>
-                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+                    <h2>Authorization</h2>
+                    <p>We have already granted access to researchers from the following institutions (alphabetical order):
+                    </p>
+                    <p>
+                        1. 
+
+                    </p>
+                    <!-- <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a> -->
                 </div>
             </div>
         </div>
