--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">ATPChecker</h1>
                         <p class="intro-text">
-                            Automated Third-party library Privacy leakage Checker tool                 
+                            Automated Third-party library Privacy leakage Checker tool.                 
                         </p>
                         <br> <b> "Demystifying Privacy Policy of Third-Party Libraries in Mobile Apps" </b>
                             <br> <i>Kaifa Zhao, Xian Zhan, Le Yu, Shiyao Zhou, Hao Zhou, 
@@ -86,7 +86,8 @@
                             <br> <i> 45th International Conference on Software Engineering (ICSE), 2023. </i>
                             <!-- <iframe width="640px" height="480px" src="https://forms.office.com/r/1sKCvnKAE5?embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe> -->
                         <p>
-                        <br> <a href="https://forms.office.com/r/1sKCvnKAE5"> Form to access code and dataset.</a> 
+                        <br> 
+                        <b><a href="https://forms.office.com/r/1sKCvnKAE5"> Form to access code and dataset.</a> </b>
                         </p>
                         
                         <br>
@@ -137,32 +138,32 @@
     <section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Start Bootstrap</h2>
-                <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p>
-                <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
+                <h2>Contact ATPChecker</h2>
+                <p>Feel free to email us to provide some feedback on our tool, give us suggestions for improvements, or to just say hello!</p>
+                <p><a href="mailto:kaifa.zhao@connect.polyu.hk">kaifa.zhao@connect.polyu.hk</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
-                    <li>
+                    <!-- <li>
                         <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                    </li>
+                    </li> -->
                     <li>
-                        <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                        <a href="https://github.com/zacharykzhao" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
     </section>
 
     <!-- Map Section -->
-    <div id="map"></div>
+    <!-- <div id="map"></div> -->
 
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Your Website 2014</p>
+            <p>Copyright &copy; ATPChecker 2022</p>
         </div>
     </footer>
 
