--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         </p>
                         <br> <b> "Demystifying Privacy Policy of Third-Party Libraries in Mobile Apps" </b>
                             <br> <i>Kaifa Zhao, Xian Zhan, Le Yu, Shiyao Zhou, Hao Zhou, 
-                                <br> Xiapu Luo, Haoyu Wang, and Yepang Liu </i>
+                                <br> Xiapu Luo*, Haoyu Wang, and Yepang Liu </i>
                             <br> <i> 45th International Conference on Software Engineering (ICSE), 2023. </i>
                             <!-- <iframe width="640px" height="480px" src="https://forms.office.com/r/1sKCvnKAE5?embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe> -->
                         <p>
@@ -106,7 +106,16 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About ATPChecker</h2>
 
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+                <p>
+                    ATPChecker is designed to help developers check whether their developed apps or libraries comply with regulation requirements.
+                </p>
+                <p>
+                    ATPChecker is a tool to analyze the consistency between TPL's privacy policies and user privacy access behaviors, and host app's privacy policies and user privacy interaction with TPLs.
+                    <!-- ATPChecker contains five module: 
+                    a) TPL data flow analysis, b) TPL privacy policies analysis, c) host app data flow analysis and d) host app privacy policies analysis.  -->
+
+
+                </p>
 
                 <img src="./img/framework.pdf" >
                 <br>
