--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
                 </p>
 
-                <img src="./img/framework.pdf" >
+                <img src="./img/framework.jpg" >
                 <br>
                 <p> Framework of ATPChecker.</p>
 
