--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">ATPChecker</h1>
                         <p class="intro-text">
-                            Automated Third-party library Privacy leakage Checker tool.                 
+                            <b> A</b>utomated <b>T</b>hird-party library <b>P</b>rivacy leakage <b>Checker</b> tool.                 
                         </p>
                         <br> <b> "Demystifying Privacy Policy of Third-Party Libraries in Mobile Apps" </b>
                             <br> <i>Kaifa Zhao, Xian Zhan, Le Yu, Shiyao Zhou, Hao Zhou, 
