--- a/index.html
+++ b/index.html
@@ -116,8 +116,7 @@
 
 
                 </p>
-
-                <img src="./img/framework.jpg" >
+                <img style="max-width:100%;overflow:hidden;" src="./img/framework.jpg" >
                 <br>
                 <p> Framework of ATPChecker.</p>
 
@@ -176,6 +175,8 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
+            <p>Thank <a href="https://github.com/learning-zone/website-templates">website-templates</a> for the website template.</p>
+            
             <p>Copyright &copy; ATPChecker 2022</p>
         </div>
     </footer>
