--- a/index.html
+++ b/index.html
@@ -175,9 +175,10 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Thank <a href="https://github.com/learning-zone/website-templates">website-templates</a> for the website template.</p>
+            <!-- <p>Thank <a href="https://github.com/learning-zone/website-templates">website-templates</a> for the website template.</p> -->
             
-            <p>Copyright &copy; ATPChecker 2022</p>
+            <!-- <p>Copyright &copy; ATPChecker 2022</p> -->
+            <p>Thank <a href="https://github.com/learning-zone/website-templates">website-templates</a> for the website template. Copyright &copy; ATPChecker 2022</p>
         </div>
     </footer>
 
