--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
 
                 </p>
-                <img style="max-width:100%;overflow:hidden;" src="./img/framework.jpg" >
+                <img style="max-width:100%;overflow:hidden;" src="./img/framework.png" >
                 <br>
                 <p> Framework of ATPChecker.</p>
 
