--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                             <b> A</b>utomated <b>T</b>hird-party library <b>P</b>rivacy leakage <b>Checker</b> tool.                 
                         </p>
                         <br> <b> "Demystifying Privacy Policy of Third-Party Libraries in Mobile Apps" </b>
-                            <br> <i>Kaifa Zhao, Xian Zhan, Le Yu, Shiyao Zhou, Hao Zhou, 
+                            <br> <i>Kaifa Zhao, Le Yu, Shiyao Zhou, Hao Zhou, Xian Zhan, 
                                 <br> Xiapu Luo*, Haoyu Wang, and Yepang Liu </i>
                             <br> <i> 45th International Conference on Software Engineering (ICSE), 2023. </i>
                             <!-- <iframe width="640px" height="480px" src="https://forms.office.com/r/1sKCvnKAE5?embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe> -->
